--- a/index.html
+++ b/index.html
@@ -117,29 +117,29 @@
       </section>
       <!--**** ^End Reference Section****-->
 
-      <!-- **** Contact / About Section****-->
+      <!--**** Contact / About Section****-->
       <section id="contact-about-section">
 
       </section>
-      <!-- **** ^End Contact / About Section****-->
+      <!--**** ^End Contact / About Section****-->
 
-      <!-- **** Notes Section****-->
+      <!--**** Notes Section****-->
       <section id="notes-section">
         <h1>Notater</h1>
+        <!--*** Note Container ***-->
         <div id="note-container">
           <div class="note-element">
-
             <div class="note-image" id="note-january">
 
             </div>
             <div class="note-description blue-note">
               <h2>Januar 2018</h2>
-              <p>Vi er på plass i Oslo for fjerde gang for å få faglig input og siste nytt innen droneteknologi. Takk til UAS Norway for to lærerike dager, vi ser frem til fortsettelsen!</p>
+              <p>Vi er på plass i Oslo for fjerde gang for å få faglig input og siste nytt innen drone&shy;teknologi. Takk til UAS Norway for to lære&shy;rike dager, vi ser frem til fort&shy;settelsen!</p>
             </div>
           </div>
           <div class="note-element">
             <div class="note-description white-note">
-              <h2>Januar 2018</h2>
+              <h2>Desember 2018</h2>
               <p>Vi er sammen med dyktige Helene Skogland godt i gang med ny film for banktjenester. Lansering før jul. Følg med.</p>
             </div>
             <div class="note-image" id="note-december">
@@ -147,6 +147,14 @@
             </div>
           </div>
         </div>
+        <!--*** ^End Note Container ***-->
+
+        <!-- See More Notes Button-->
+        <button type="button" name="moreNotes" id="more-notes">
+          <img src=".\resources\svg\eye.svg" alt="Se">
+          <span>Flere Notater</span>
+        </button>
+
       </section>
       <!--**** ^End Notes Section ****-->
     </main>
